--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "eslint": "^4.9.0",
     "react": "16.0.0",
     "react-native": "0.51.0",
-    "react-native-calendar-strip": "^1.3.0",
+    "react-native-action-button": "^2.8.4",
+    "react-native-calendar-strip": "git+ssh://git@github.com:vinsalmont/react-native-calendar-strip.git",
     "react-native-iphone-x-helper": "^1.0.2",
     "react-native-keyboard-aware-scroll-view": "^0.4.1",
     "react-native-loading-spinner-overlay": "^0.5.2",
